fix: pathが間違っていたのを修正

--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -127,7 +127,7 @@ jobs:
       - name: PRにカバレッジをコメント
         if: github.event_name == 'pull_request'
         run: |
-          gh pr comment ${{ github.event.pull_request.number }} --body "$(cat coverage_report.md)"
+          gh pr comment ${{ github.event.pull_request.number }} --body "$(cat coverage/coverage_report.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NO_COLOR: true
