--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: coverage
         run: |
           for function_name in $(ls); do
-            echo "<details><summary>${function_name}のテストカバレッジ</summary>" >> coverage_report.md
+            echo "<details><summary>${function_name}</summary>" >> coverage_report.md
             echo "" >> coverage_report.md
             echo "\`\`\`" >> coverage_report.md
             cat ${function_name} >> coverage_report.md
