--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -142,6 +142,6 @@ jobs:
       - name: PRにカバレッジをコメント
         if: github.event_name == 'pull_request'
         run: |
-          gh pr comment ${{ github.event.pull_request.number }} --body "$(cat coverage/coverage_report.md)" --delete-last
+          gh pr comment ${{ github.event.pull_request.number }} --body "$(cat coverage/coverage_report.md)" --edit-last
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
