--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "@faker-js/faker": "^9.7.0",
     "@hono/vite-build": "^1.2.0",
     "@hono/vite-dev-server": "^0.18.1",
+    "@playwright/test": "^1.52.0",
     "@prisma/generator-helper": "^6.5.0",
     "@remix-run/dev": "^2.16.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^22.15.30",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^10.0.0",
