chore: ESLintの設定にe2eディレクトリを追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
           "**/*.spec.ts",
           "**/test/**",
           "**/__tests__/**",
-          "**/__mocks__/**"
+          "**/__mocks__/**",
+          "**/e2e/**"
         ]
       }
     ]
