chore: ESLint設定にplaywright.config.tsを追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
           "**/test/**",
           "**/__tests__/**",
           "**/__mocks__/**",
-          "**/e2e/**"
+          "**/e2e/**",
+          "playwright.config.ts"
         ]
       }
     ]
