--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,10 +1,10 @@
 name: E2E Test
 
 on:
-  push:
-    branches: main
-  pull_request:
-    branches: main
+  workflow_run:
+    workflows: [CI]
+    types: [completed]
+    branches: [main]
     paths:
       - '.github/workflows/playwright.yml'
       - 'src/application/web/**'
