--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test:frontend:coverage": "vitest run -c vitest/config.frontend.ts --coverage",
     "test:service:coverage": "vitest run -c vitest/config.service.ts --coverage",
     "test:api:coverage": "vitest run -c vitest/config.api.ts --coverage",
+    "test:e2e": "npx playwright test",
+    "test:e2e:report": "npx playwright show-report",
     "check-types": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --ext .ts,.tsx . --fix",
