--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,15 @@
     // Playwrightのベストプラクティス参考: https://playwright.dev/docs/best-practices#lint-your-tests
     "@typescript-eslint/no-floating-promises": "error"
   },
+  // no-floating-promisesがReactのuseEffect内でのasyncに過剰に反応するため
+  "overrides": [
+    {
+      "files": ["**/*.tsx"],
+      "rules": {
+        "@typescript-eslint/no-floating-promises": "off"
+      }
+    }
+  ],
   "ignorePatterns": [
     "node_modules/",
     "dist/",
