--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,21 @@
     // TODO: SUPPORTED TYPESCRIPT VERSIONS: >=4.7.4 <5.6.0の解消
     "warnOnUnsupportedTypeScriptVersion": false
   },
-  "extends": ["airbnb", "airbnb-typescript", "prettier"],
+  "extends": [
+    "airbnb",
+    "airbnb-typescript",
+    "prettier",
+    "plugin:storybook/recommended"
+  ],
   "rules": {
     "consistent-return": "off",
     "import/extensions": "off",
-    "complexity": ["error", { "max": 10 }], // 循環的複雑度：10以下は非常に良いとされるため
+    "complexity": [
+      "error",
+      {
+        "max": 10
+      }
+    ], // 循環的複雑度：10以下は非常に良いとされるため
     "import/no-extraneous-dependencies": [
       "error",
       {
@@ -30,7 +40,9 @@
   // no-floating-promisesがReactのuseEffect内でのasyncに過剰に反応するため
   "overrides": [
     {
-      "files": ["**/*.tsx"],
+      "files": [
+        "**/*.tsx"
+      ],
       "rules": {
         "@typescript-eslint/no-floating-promises": "off"
       }
