--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "db:migrate:deploy": "npx prisma migrate deploy",
     "db:reset": "npx prisma migrate reset --skip-seed",
     "db:studio": "npx prisma studio",
-    "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts"
+    "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "prisma": {
     "schema": "./prisma"
@@ -66,6 +68,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.0",
     "@cloudflare/workers-types": "^4.20241218.0",
     "@faker-js/faker": "^9.7.0",
     "@hono/vite-build": "^1.2.0",
@@ -73,6 +76,11 @@
     "@playwright/test": "^1.52.0",
     "@prisma/generator-helper": "^6.5.0",
     "@remix-run/dev": "^2.16.5",
+    "@storybook/addon-a11y": "^9.0.6",
+    "@storybook/addon-docs": "^9.0.6",
+    "@storybook/addon-onboarding": "^9.0.6",
+    "@storybook/addon-vitest": "^9.0.6",
+    "@storybook/react-vite": "^9.0.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.15.30",
     "@types/react": "^18.2.20",
@@ -80,20 +88,24 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vitest/coverage-v8": "^3.0.9",
+    "@vitest/browser": "^3.2.3",
+    "@vitest/coverage-v8": "^3.2.3",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-storybook": "^9.0.6",
+    "playwright": "^1.52.0",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.7.0",
     "prisma-erd-generator": "^2.0.4",
     "remix-hono": "^0.0.16",
+    "storybook": "^9.0.6",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
     "vite": "^5.4.19",
-    "vitest": "^3.0.4",
+    "vitest": "^3.2.3",
     "vitest-mock-extended": "^3.1.0",
     "wrangler": "^3.114.7"
   },
