--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@remix-run/cloudflare": "^2.16.5",
     "@remix-run/cloudflare-pages": "^2.16.5",
     "@remix-run/react": "^2.16.5",
-    "@tailwindcss/vite": "^4.0.8",
+    "@tailwindcss/vite": "^4.1.9",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -102,15 +102,12 @@
     "prisma-erd-generator": "^2.0.4",
     "remix-hono": "^0.0.16",
     "storybook": "^9.0.6",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.1.9",
     "typescript": "^5.7.3",
     "vite": "^5.4.19",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.3",
     "vitest-mock-extended": "^3.1.0",
     "wrangler": "^3.114.7"
-  },
-  "overrides": {
-    "esbuild": "0.17.19",
-    "estree-util-value-to-estree": "3.3.3"
   }
 }
