--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,9 @@
           "**/__tests__/**",
           "**/__mocks__/**",
           "**/e2e/**",
-          "playwright.config.ts"
+          "playwright.config.ts",
+          "vite.config.ts",
+          "vitest/**/*.ts"
         ]
       }
     ],
