chore: GitHub Actionsのワークフローに権限と同時実行設定を追加

--- a/.github/workflows/test_storybook.yaml
+++ b/.github/workflows/test_storybook.yaml
@@ -16,6 +16,14 @@ on:
 env:
   NODE_VERSION_FILE: .node-version
 
+permissions:
+  contents: read
+  pull-requests: write
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
