feat: vitest.shims.d.tsとvitest.workspace.tsを削除

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,8 +28,7 @@
           "**/e2e/**",
           "playwright.config.ts",
           "vite.config.ts",
-          "vitest/**/*.ts",
-          "vitest.workspace.ts"
+          "vitest/**/*.ts"
         ]
       }
     ],
