feat: ts-config-pathsで不要なファイルを削除

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,9 @@
           "**/__tests__/**",
           "**/__mocks__/**",
           "**/e2e/**",
-          "playwright.config.ts"
+          "playwright.config.ts",
+          "vitest/**",
+          "vite.config.ts"
         ]
       }
     ],
