--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
     "vite": "^5.4.19",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.4",
     "vitest-mock-extended": "^3.1.0",
     "wrangler": "^3.114.7"
