--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -223,7 +223,7 @@ jobs:
         run: npm run e2e
 
       - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main' && !cancelled()
         with:
           name: playwright-report
           path: playwright-report/
