--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,6 +53,11 @@ jobs:
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
 
+      - name: Prismaキャッシュのセットアップ
+        uses: ./.github/actions/setup_prisma_cache
+        with:
+          schema-path: prisma/main.prisma
+
       - name: フロントエンドの差分チェック
         id: check-frontend
         uses: ./.github/actions/diff
