chore: Prismaファイルのパスを修正して全てのスキーマファイルを検証対象に追加

--- a/.github/workflows/check_prisma.yaml
+++ b/.github/workflows/check_prisma.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'prisma/schema.prisma'
+      - 'prisma/**/*.prisma'
       - '.github/workflows/check_prisma.yaml'
 
 env:
