--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -3,7 +3,7 @@ description: Continuous Delivery
 
 on:
   workflow_run:
-    workflows: [Test]
+    workflows: [Lint, Test]
     types: [completed]
     branches: [main]
   workflow_dispatch:
