refactor: neverthrowを依存関係から削除

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,8 +30,7 @@
     "qiita",
     "Supabase",
     "Timestamptz",
-    "zenn",
-    "neverthrow"
+    "zenn"
   ],
   "[markdown]":  {
       "editor.wordWrap": "on",
