--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "schema": "./prisma"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-validator": "^0.5.0",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.2.2",
@@ -51,6 +52,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hono": "^4.6.18",
+    "hono-openapi": "^0.4.8",
     "hono-remix-adapter": "^0.5.4",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
@@ -62,7 +64,8 @@
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.0.5",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-openapi": "^4.2.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241218.0",
