--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "remix vite:build",
     "preview": "wrangler dev",
     "deploy": "npm run build && wrangler deploy",
-    "test:frontend:coverage": "vitest run -c vitest/config.frontend.ts --coverage",
-    "test:service:coverage": "vitest run -c vitest/config.service.ts --coverage",
-    "test:api:coverage": "vitest run -c vitest/config.api.ts --coverage",
+    "test:frontend": "vitest run -c vitest/config.frontend.ts",
+    "test:service": "vitest run -c vitest/config.service.ts",
+    "test:api": "vitest run -c vitest/config.api.ts",
     "e2e": "npx playwright test",
     "e2e:report": "npx playwright show-report",
     "e2e:gen": "npx playwright codegen",
