--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint:fix": "eslint --ext .ts,.tsx . --fix",
     "format": "prettier . --check",
     "format:fix": "prettier . --write",
+    "lint:ci": "npm run lint && npm run format && npm run check-types",
     "db:gen": "npx prisma generate",
     "db:migrate": "npx prisma migrate dev --skip-seed",
     "db:migrate:sql-only": "npx prisma migrate dev --skip-seed --skip-generate",
