--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,3 @@
 {
-  "recommendations": [
-    "biomejs.biome",
-    "bradlc.vscode-tailwindcss",
-    "denoland.vscode-deno"
-  ]
+  "recommendations": ["biomejs.biome", "bradlc.vscode-tailwindcss", "denoland.vscode-deno"]
 }
