--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format:fix": "biome format --write .",
     "check": "biome check .",
     "check:fix": "biome check --write .",
-    "lint:ci": "npm run check && npm run check-types",
+    "lint:ci": "biome ci . && npm run check-types",
     "db:gen": "npx prisma generate",
     "db:migrate": "npx prisma migrate dev --skip-seed",
     "db:migrate:sql-only": "npx prisma migrate dev --skip-seed --skip-generate",
