--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,25 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Node.jsの構築
-        uses: ./.github/actions/setup_node
+      - name: Setup Biome
+        uses: biomejs/setup-biome@v2
         with:
-          node-version-file: ${{ env.NODE_VERSION_FILE }}
+          version: latest
 
-      - name: Lint
-        run: npm run lint
-
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Node.jsの構築
-        uses: ./.github/actions/setup_node
-        with:
-          node-version-file: ${{ env.NODE_VERSION_FILE }}
-
-      - name: Format
-        run: npm run format
+      - name: Run Biome
+        run: biome ci .
 
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
   ts-compile-check:
