chore: lintジョブをBiomeに名称変更

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,7 +12,7 @@ env:
   NODE_VERSION_FILE: .node-version
 
 jobs:
-  lint:
+  biome:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
