chore: spinner iconの自動生成先をbiomeの対象から外す

--- a/biome.json
+++ b/biome.json
@@ -8,6 +8,7 @@
       "!**/.vscode/",
       "!prisma/ERD.md",
       "!src/application/web/components/ui",
+      "!src/application/web/components/customized",
       "!**/supabase"
     ]
   },
