--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -161,6 +161,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npm run e2e
         env:
+          # PlaywrightをCIモードで実行するための環境変数
           CI: true
 
       - uses: actions/upload-artifact@v4
