--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "db:migrate:deploy": "npx prisma migrate deploy",
     "db:reset": "npx prisma migrate reset --skip-seed",
     "db:studio": "npx prisma studio",
-    "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts"
+    "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "prisma": {
     "schema": "./prisma"
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
+    "@chromatic-com/storybook": "^4.0.1",
     "@cloudflare/workers-types": "^4.20241218.0",
     "@faker-js/faker": "^9.7.0",
     "@hono/vite-build": "^1.2.0",
@@ -72,6 +75,10 @@
     "@playwright/test": "^1.52.0",
     "@prisma/generator-helper": "^6.5.0",
     "@remix-run/dev": "^2.16.5",
+    "@storybook/addon-a11y": "^9.0.18",
+    "@storybook/addon-docs": "^9.0.18",
+    "@storybook/addon-vitest": "^9.0.18",
+    "@storybook/react-vite": "^9.0.18",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.15.30",
     "@types/react": "^18.2.20",
@@ -81,12 +88,15 @@
     "prisma": "^6.7.0",
     "prisma-erd-generator": "^2.0.4",
     "remix-hono": "^0.0.16",
+    "storybook": "^9.0.18",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
     "vitest-mock-extended": "^3.1.0",
-    "wrangler": "^3.114.7"
+    "wrangler": "^3.114.7",
+    "@vitest/browser": "3.2.4",
+    "playwright": "^1.54.1"
   }
 }
