--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "db:studio": "npx prisma studio",
     "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "vitest run -c vitest/config.storybook.ts --project=storybook"
   },
   "prisma": {
     "schema": "./prisma"
