fix: vitest/config.storybook.tsをテストパスに追加

--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'src/application/web/**/*.tsx'
+      - 'vitest/config.storybook.ts'
       - '.github/workflows/test-ui.yaml'
 
 jobs:
