chore: 不足している依存関係をインストールするステップを修正

--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -28,9 +28,8 @@ jobs:
       - name: Node.jsの構築
         uses: ./.github/actions/setup_node
 
-      - name: Install missing dependencies
-        run: |
-          npm install --no-save markdown-to-jsx
+      - name: Install dependencies
+        run: npm install -D happy-dom
 
       - name: Run tests
         run: npm run test-storybook:ci
