--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -32,4 +32,4 @@ jobs:
         run: npm install -D happy-dom
 
       - name: Run tests
-        run: npm run test-storybook:ci
+        run: npm run test-storybook
