fix: happydom入れると別の問題出て大変なので、王道でなんとかする。無理なら最悪諦める

--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -28,8 +28,5 @@ jobs:
       - name: Node.jsの構築
         uses: ./.github/actions/setup_node
 
-      - name: Install dependencies
-        run: npm install -D happy-dom
-
       - name: Run tests
-        run: npm run test-storybook:ci
+        run: npm run test-storybook
