--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: ./.github/actions/setup_node
 
       - name: Playwrightのセットアップ
-        run: npx playwright install chromium --with-deps
+        run: npx playwright install --with-deps
 
       - name: Run tests
         run: npm run test-storybook
