chore: Playwrightのセットアップ後にインストールされたChromiumのパスを確認するステップを追加

--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Playwrightのセットアップ
         run: npx playwright install chromium --with-deps
 
+      - name: インストールされたChromiumのパスを確認
+        run: ls /home/runner/.cache/ms-playwright/
+
       - name: Run tests
         env:
           CI: true
