--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -24,11 +24,15 @@ jobs:
       - name: Node.jsの構築
         uses: ./.github/actions/setup_node
 
+      - name: Playwrightブラウザのキャッシュ
+        uses: actions/cache@v4
+        id: playwright-cache
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
       - name: Playwrightのセットアップ
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: npx playwright install chromium --with-deps
-
-      - name: インストールされたChromiumのパスを確認
-        run: ls /home/runner/.cache/ms-playwright/
 
       - name: Run tests
         env:
