--- a/.github/workflows/test-ui.yaml
+++ b/.github/workflows/test-ui.yaml
@@ -24,14 +24,14 @@ jobs:
       - name: Node.jsの構築
         uses: ./.github/actions/setup_node
 
-      - name: Playwrightブラウザのキャッシュ
-        uses: actions/cache@v4
-        id: playwright-cache
-        with:
-          path: ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
+      # - name: Playwrightブラウザのキャッシュ
+      #   uses: actions/cache@v4
+      #   id: playwright-cache
+      #   with:
+      #     path: ~/.cache/ms-playwright
+      #     key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
       - name: Playwrightのセットアップ
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        # if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: npx playwright install chromium --with-deps
 
       - name: インストールされたChromiumのパスを確認
@@ -40,8 +40,8 @@ jobs:
       - name: Chromiumのパスを詳細に確認
         run: ls /home/runner/.cache/ms-playwright/chromium_headless_shell-1169
 
-      - name: Chromiumに実行権限を付与
-        run: chmod +x ~/.cache/ms-playwright/chromium*/chrome-linux/chrome
+      # - name: Chromiumに実行権限を付与
+      #   run: chmod +x ~/.cache/ms-playwright/chromium*/chrome-linux/chrome
 
       - name: Run tests
         env:
