--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "dev": "remix vite:dev",
-    "build": "remix vite:build",
+    "dev": "react-router dev",
+    "build": "react-router build",
     "test:frontend": "vitest run -c vitest/config.frontend.ts",
     "test:service": "vitest run -c vitest/config.service.ts",
     "test:api": "vitest run -c vitest/config.api.ts",
@@ -45,20 +45,19 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.4",
-    "@remix-run/cloudflare": "^2.16.5",
-    "@remix-run/cloudflare-pages": "^2.16.5",
-    "@remix-run/react": "^2.16.5",
+    "@react-router/cloudflare": "^7.0.0",
     "@tailwindcss/vite": "^4.0.8",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "hono": "^4.6.18",
-    "hono-remix-adapter": "^0.5.4",
+    "hono": "^4.8.12",
+    "hono-react-router-adapter": "^0.6.5",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "pino": "^9.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.0.0",
     "rss-parser": "^3.13.0",
     "sonner": "^2.0.3",
     "swr": "^2.3.4",
@@ -77,7 +76,7 @@
     "@hono/vite-dev-server": "^0.18.1",
     "@playwright/test": "^1.52.0",
     "@prisma/generator-helper": "^6.5.0",
-    "@remix-run/dev": "^2.16.5",
+    "@react-router/dev": "^7.0.0",
     "@storybook/addon-a11y": "^9.0.18",
     "@storybook/addon-docs": "^9.0.18",
     "@storybook/addon-vitest": "^9.0.18",
@@ -96,7 +95,6 @@
     "playwright": "^1.54.1",
     "prisma": "^6.7.0",
     "prisma-erd-generator": "^2.0.4",
-    "remix-hono": "^0.0.16",
     "storybook": "^9.0.18",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
