--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "types": ["@cloudflare/workers-types/2023-07-01", "vite/client", "vitest/globals"],
+    "types": ["@cloudflare/workers-types/2023-07-01", "vite/client", "vitest/globals","@react-router/node"],
+    "rootDirs": [".", "./.react-router/types"],
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
@@ -14,5 +15,6 @@
       "@/*": ["./src/*"]
     }
   },
+  "include": [".react-router/types/**/*", "src"],
   "exclude": ["supabase"]
 }
