--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,8 @@
 name = "trend-diary"
 compatibility_date = "2025-04-01"
 compatibility_flags = [ "nodejs_compat" ]
-main = "./functions/[[path]].ts"
-
-[assets]
-directory = "./dist/client"
+main = "./src/worker.ts"
+assets = { directory = "./build/client" }
 
 [observability.logs]
 enabled = true
