--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "types": ["@cloudflare/workers-types/2023-07-01", "vite/client", "vitest/globals","@react-router/node"],
+    "types": [
+      "@cloudflare/workers-types/2023-07-01",
+      "vite/client",
+      "vitest/globals",
+      "@react-router/node"
+    ],
     "rootDirs": [".", "./.react-router/types"],
     "jsx": "react-jsx",
     "jsxImportSource": "react",
