chore: 面倒なのでコマンドをまとめ直す
- biome unsafe
- check-typesは履歴でcheckと混ざって面倒

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -35,4 +35,4 @@ jobs:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
 
       - name: TypeScript型チェック
-        run: npm run check-types
+        run: npm run tsc
