--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "e2e": "npx playwright test",
     "e2e:report": "npx playwright show-report",
     "e2e:gen": "npx playwright codegen",
-    "check-types": "tsc --noEmit",
+    "tsc": "tsc --noEmit",
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
     "format": "biome format .",
     "format:fix": "biome format --write .",
     "check": "biome check .",
-    "check:fix": "biome check --write .",
-    "lint:ci": "biome ci . && npm run check-types",
+    "check:fix": "biome check --write . --unsafe",
+    "lint:ci": "biome ci . && npm run tsc",
     "db:gen": "npx prisma generate",
     "db:migrate": "npx prisma migrate dev --skip-seed",
     "db:migrate:sql-only": "npx prisma migrate dev --skip-seed --skip-generate",
