--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -6,3 +6,6 @@ DIRECT_URL=postgres://postgres:password@localhost:5432/postgres
 
 # Discord webhook URL for alert
 DISCORD_WEBHOOK_URL=
+
+# 一時的なフィーチャーフラグ
+FEATURE_USER_ENABLED=false
