--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "check:fix": "biome check --write . --unsafe",
     "lint:ci": "biome ci . && npm run tsc",
     "db:gen": "npx prisma generate",
-    "db:migrate": "npx prisma migrate dev --skip-seed",
+    "db:migrate": "npx prisma migrate dev",
     "db:migrate:sql-only": "npx prisma migrate dev --skip-seed --skip-generate",
     "db:migrate:deploy": "npx prisma migrate deploy",
-    "db:reset": "npx prisma migrate reset --skip-seed",
+    "db:reset": "npx prisma migrate reset",
+    "db:seed": "npx tsx prisma/seed.ts",
     "db:studio": "npx prisma studio",
     "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts",
     "storybook": "storybook dev -p 6006",
@@ -33,7 +34,8 @@
     "test-storybook": "vitest run -c vitest/config.storybook.ts"
   },
   "prisma": {
-    "schema": "./prisma"
+    "schema": "./prisma",
+    "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.5.0",
@@ -42,11 +44,13 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@react-router/cloudflare": "^7.0.0",
     "@tailwindcss/vite": "^4.0.8",
+    "@tanstack/react-table": "^8.21.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -97,6 +101,7 @@
     "prisma-erd-generator": "^2.0.4",
     "storybook": "^9.0.18",
     "tailwindcss": "^4.0.8",
+    "tsx": "^4.20.4",
     "typescript": "^5.7.3",
     "vite": "^5.4.19",
     "vite-tsconfig-paths": "^5.1.4",
