--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "@/application/web/components",
-    "utils": "@/application/web/components/ui/lib/utils'",
+    "utils": "@/application/web/components/ui/lib/utils",
     "ui": "@/application/web/components/ui",
     "lib": "@/application/web/components/ui/lib",
     "hooks": "@/application/web/components/ui/hooks"
