--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/uuid": "^10.0.0",
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "dotenv": "^17.2.1",
     "jsdom": "^26.1.0",
     "playwright": "^1.54.1",
     "prisma": "^6.7.0",
