--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -159,7 +159,7 @@ jobs:
 
       - name: E2Eテストの実行
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: npm run e2e
+        run: npm run e2e -- --pass-with-no-tests
 
       - uses: actions/upload-artifact@v4
         if: github.event_name == 'push' && github.ref == 'refs/heads/main' && !cancelled()
