chore: devDepsにあるものはnpx不要

--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "lint:ci": "biome ci . && npm run tsc",
     "check": "biome check .",
     "check:fix": "biome check --write . --unsafe",
-    "db:gen": "npx prisma generate",
-    "db:migrate": "npx prisma migrate dev",
-    "db:migrate:sql-only": "npx prisma migrate dev --skip-seed --skip-generate",
-    "db:reset": "npx prisma migrate reset",
-    "db:seed": "npx tsx prisma/seed.ts",
-    "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts",
+    "db:gen": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:sql-only": "prisma migrate dev --skip-seed --skip-generate",
+    "db:reset": "prisma migrate reset",
+    "db:seed": "tsx prisma/seed.ts",
+    "supabase:db:type-gen": "supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts",
     "storybook": "storybook dev -p 6006",
     "test-storybook": "vitest run -c vitest/config.storybook.ts"
   },
