feat: e2eテストを一度data-slotを使うように復元

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "supabase:db:type-gen": "npx supabase gen types typescript --local > supabase/functions/infrastructure/database.types.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test-storybook": "vitest run -c vitest/config.storybook.ts"
+    "test-storybook": "vitest run -c vitest/config.storybook.ts",
+    "test-storybook:coverage": "vitest run -c vitest/config.storybook.ts --coverage"
   },
   "prisma": {
     "schema": "./prisma",
