chore: AnchorLinkコンポーネントの使用を促すために、直接<a />タグの使用を警告するプラグインを追加

--- a/biome.json
+++ b/biome.json
@@ -349,5 +349,6 @@
   "assist": {
     "enabled": true,
     "actions": { "source": { "organizeImports": "on" } }
-  }
+  },
+  "plugins": ["./plugin/biome/no-use-direct-dom-a-element.grit"]
 }
