--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -155,7 +155,10 @@ jobs:
 
       - name: E2Eテストの差分実行
         if: github.event_name == 'pull_request'
-        run: npm run e2e -- --reporter=github --only-changed=origin/$GITHUB_BASE_REF
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm run e2e -- --reporter=github --only-changed=origin/$GITHUB_BASE_REF
 
       - name: E2Eテストの実行
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
