fix: functionsのCIで編集できるコメントがないと新しく作成するように

--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -144,6 +144,10 @@ jobs:
       - name: PRにカバレッジをコメント
         if: github.event_name == 'pull_request'
         run: |
-          gh pr comment ${{ github.event.pull_request.number }} --body "$(cat coverage/coverage_report.md)" --edit-last
+            gh pr comment ${{ github.event.pull_request.number }} \
+              --body "$(cat coverage/coverage_report.md)" \
+              --edit-last || \
+            gh pr comment ${{ github.event.pull_request.number }} \
+            --body "$(cat coverage/coverage_report.md)"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
